Added win/lose related function and finished basic logic of game

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
   </head>
   <body>
     <h3>Current Player is : Player <span id="current-player"></span></h3>
+    <h3>
+      <span id="result"></span>
+    </h3>
     <div class="grids">
       <div></div>
       <div></div>
